--- a/Meu3/Meu3.html
+++ b/Meu3/Meu3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Page 3</title>
-    <link rel="icon" href="/icons/Corazon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/Meu3/Meu3.css">
+    <link rel="icon" href="Corazon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Meu3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
