--- a/Meu3/Meu3.html
+++ b/Meu3/Meu3.html
@@ -3,42 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Page 3</title>
-    <link rel="icon" href="Corazon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Meu3.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
-<body id="background">
-
-    <center>
-        <div id="background2">
-            <h2 id="title">Reproductor de musica</h2>
-        </div>
-
-        <div class="music-player">
-            <audio id="audio" src="/Music/Me gustas Natural.mp3"></audio>
-            <button id="prev">Anterior</button>
-            <button id="play">Play</button>
-            <button id="pause">Pause</button>
-            <button id="next">Siguiente</button>
-
-            <div class="d-flex justify-content-center" id="bottom">
-                <div id="current-time">00:00</div>
-                <div id="duration">00:00</div>
-            </div>
-            
-        </div>
-
-        <div class="d-flex justify-content-center" id="bottom">
-            <h4><button id="back">Volver</button></h4>
-            <h4><button id="forward">Siguiente</button></h4>
-        </div>
-    </center>
-
-    <script src="./Meu3.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<body>
+    
 </body>
 </html>
