--- a/Sentimientos/Sentimiento-1/Sentimiento1.html
+++ b/Sentimientos/Sentimiento-1/Sentimiento1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Primer momento </title>
-    <link rel="icon" href="/Icons/Corazon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./Sentimiento1.css">
+    <link rel="icon" href="Corazon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Sentimiento1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
         </div>
     </center>
 
-    <script src="./Sentimiento-1.js"></script>
+    <script src="./Sentimiento1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
