--- a/Secreto/Secreto.html
+++ b/Secreto/Secreto.html
@@ -22,7 +22,7 @@
 
             <img src="Juntos.ico" alt="Juntos" id="together">
 
-            <h2 id="text">Eres muy hermosa ❤️</h2>
+            <h2 id="text">❤️</h2>
 
             <h4> <button id="back"> Volver </button> </h4>
 
