--- a/Meu3/Meu3.html
+++ b/Meu3/Meu3.html
@@ -15,7 +15,7 @@
 
     <center>
         <div id="background2">
-            <h2 id="title">Reproductor de musica</h2>
+            <h2 id="title">Reproductor de música</h2>
         </div>
 
         <div class="music-player">
