--- a/Secreto/Secreto2/Secreto2.html
+++ b/Secreto/Secreto2/Secreto2.html
@@ -18,7 +18,7 @@
 
         <div>
 
-            <img src="Juntos.ico" alt="Juntos" id="together">
+            <img src="Juntos2.ico" alt="Juntos" id="together">
 
             <h2 id="text"> 2do recuerdo juntos ❤️</h2>
 
