--- a/Meu5/Meu5.html
+++ b/Meu5/Meu5.html
@@ -15,17 +15,24 @@
 <body id="background">
 
     <center>
+        <div id="background2">
+            <h2 id="title">Momentos escritos</h2>
+        </div>
 
-            <h2 id="title"> Ojalá te haya gustado y te haya sacado una sonrisa. </h2>
+        </div>
 
-            <h2 id="text">Te quiero mucho Meu ❤️</h2>
+        <div class="d-flex justify-content-center" id="top">
+            <h6><button id="first">5to momento</button></h6>
+            <button id="cloudybutton"><img src="CloudySushi.ico" alt="Cloudy" id="cloudy"></button>
+            <h6><button id="second">6to momento</button></h6>
+        </div>
 
-            <div class="d-flex justify-content-center" id="bottom">
-                <h4> <button id="back"> Volver </button> </h4>
-                <h4><button id="forward">Siguiente</button></h4>
-            </div>
+        
 
-
+        <div class="d-flex justify-content-center" id="bottom">
+            <h4><button id="back">Volver</button></h4>
+            <h4><button id="forward">Siguiente</button></h4>
+        </div>
     </center>
 
     <script src="./Meu5.js"></script>
