--- a/Meu5/Meu5.html
+++ b/Meu5/Meu5.html
@@ -22,12 +22,12 @@
         </div>
 
         <div class="d-flex justify-content-center" id="top">
-            <h6><button id="first">5to momento</button></h6>
-            <button id="cloudybutton"><img src="CloudySushi.ico" alt="Cloudy" id="cloudy"></button>
-            <h6><button id="second">6to momento</button></h6>
-        </div>
+            <h6><button id="fifth">5to momento</button></h6>
 
-        
+            <button id="cloudybutton"><img src="CloudySushi.ico" alt="Cloudy" id="cloudy"></button>
+
+            <h6><button id="sixth">6to momento</button></h6>
+        </div>
 
         <div class="d-flex justify-content-center" id="bottom">
             <h4><button id="back">Volver</button></h4>
