--- a/Sentimientos/Sentimiento-6/Sentimiento6.html
+++ b/Sentimientos/Sentimiento-6/Sentimiento6.html
@@ -21,7 +21,14 @@
 
             <h2 id="title"> 6to momento </h2> 
 
-            <h6 id="text" class="small-text"> No sabes lo que siento cuando te veo caminar hacia mí; cada paso tuyo me llena de una alegría inmensa. Lo que tenemos es tan especial y único que no encuentro palabras para describirlo. Espero que esto nunca se acabe, porque nunca antes había sentido algo así. Es algo tan valioso para mí que lo atesoro con todo mi corazón. Eres muy importante en mi vida, y cada momento a tu lado es un regalo que atesoro profundamente. </h6>
+            <h6 id="text" class="small-text"> Hoy fué un día increíble Meu, me la pasé muy bien, siempre me da una alegría enorme poder escuchar tu risa, tus bromas, molestarte y solo con verte ya causas eso en mí.
+
+                Nunca me voy a cansar de lo que tenemos, porque cada momento a tu lado es único y especial y te lo voy a recordar siempre que pueda.
+                
+                Sé que siempre querré más de ti, más de nosotros, más de esta conexión que solo existe cuando estamos juntos. </h6>
+                
+                <h6 id="text3" class="small-text"> Ubi tu ibi ego ❤️ </h6>
+
 
             <h6 id="text2"> 21/3/2025 </h6>
 
