--- a/Sentimientos/Sentimiento-5/Sentimiento5.html
+++ b/Sentimientos/Sentimiento-5/Sentimiento5.html
@@ -23,6 +23,8 @@
 
             <h6 id="text" class="small-text"> No sabes lo que siento cuando te veo caminar hacia mí; cada paso tuyo me llena de una alegría inmensa. Lo que tenemos es tan especial y único que no encuentro palabras para describirlo. Espero que esto nunca se acabe, porque nunca antes había sentido algo así. Es algo tan valioso para mí que lo atesoro con todo mi corazón. Eres muy importante en mi vida, y cada momento a tu lado es un regalo que atesoro profundamente. </h6>
 
+            <h6 id="text3" class="small-text"> Te amo ❤️ </h6>
+
             <h6 id="text2"> 17/3/2025 </h6>
 
             <h4> <button id="back"> Volver </button> </h4>
