--- a/Sentimientos/Sentimiento-6/Sentimiento6.html
+++ b/Sentimientos/Sentimiento-6/Sentimiento6.html
@@ -27,7 +27,7 @@
                 
                 Sé que siempre querré más de ti, más de nosotros, más de esta conexión que solo existe cuando estamos juntos. </h6>
                 
-                <h6 id="text3" class="small-text"> Ubi tu ibi ego ❤️ </h6>
+                <h6 id="text3" class="small-text"> Ubi tu ibi ego. ❤️ </h6>
 
 
             <h6 id="text2"> 21/3/2025 </h6>
