--- a/Secreto/Secreto3/Secreto3.html
+++ b/Secreto/Secreto3/Secreto3.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Secreto 2</title>
+    <title> Secreto 3</title>
     <link rel="icon" href="Corazon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Secreto2.css">
+    <link rel="stylesheet" href="Secreto3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,20 +18,19 @@
 
         <div>
 
-            <img src="Juntos2.ico" alt="Juntos" id="together">
+            <img src="forever.ico" alt="forever" id="together">
 
-            <h2 id="text"> 2do recuerdo juntos ❤️</h2>
+            <h2 id="text"> Forever </h2>
 
             <div class="d-flex justify-content-center" id="bottom">
                 <h4> <button id="back"> Volver </button> </h4>
-                <h4> <button id="forward"> Siguiente </button> </h4>
             </div>
 
         </div>
 
     </center>
 
-    <script src="./Secreto2.js"></script>
+    <script src="./Secreto3.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
