--- a/Meu5/Forever/Forever.html
+++ b/Meu5/Forever/Forever.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Secreto 3</title>
     <link rel="icon" href="Corazon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Secreto3.css">
+    <link rel="stylesheet" href="Forever.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,9 @@
 
         <div>
 
-            <img src="forever.ico" alt="forever" id="together">
+            <img src="Chat.ico" alt="forever" id="together">
 
-            <h2 id="text"> Forever </h2>
+            <h2 id="text"> Te amo infinito </h2>
 
             <div class="d-flex justify-content-center" id="bottom">
                 <h4> <button id="back"> Volver </button> </h4>
@@ -30,7 +30,7 @@
 
     </center>
 
-    <script src="./Secreto3.js"></script>
+    <script src="./Forever.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
