--- a/Meu5/Forever/Forever.html
+++ b/Meu5/Forever/Forever.html
@@ -20,7 +20,7 @@
 
             <img src="Chat.ico" alt="forever" id="together">
 
-            <h2 id="text"> Te amo infinito </h2>
+            <h2 id="text"> Te amo infinito. </h2>
 
             <div class="d-flex justify-content-center" id="bottom">
                 <h4> <button id="back"> Volver </button> </h4>
