--- a/Meu6/Meu6.html
+++ b/Meu6/Meu6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Meu Page 5 </title>
+    <title> Meu Page 6 </title>
     <link rel="icon" href="Corazon.ico" type="image/x-icon">
     <link rel="stylesheet" href="Meu6.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 
             <h2 id="title"> Ojalá te haya gustado y te haya sacado una sonrisa. </h2>
 
-            <h2 id="text">Te quiero mucho Meu ❤️</h2>
+            <h2 id="text">Te amo mucho Meu ❤️</h2>
 
             <div class="d-flex justify-content-center" id="bottom">
                 <h4> <button id="back"> Volver </button> </h4>
